--- a/dbench_jumbf_app/CMakeLists.txt
+++ b/dbench_jumbf_app/CMakeLists.txt
@@ -1,14 +1,22 @@
 # CMakeList.txt : CMake project for jumbf_lib, include source and define
 # project specific logic here.
 #
+# executable
+set( EXE_NAME dbench_jumbf_app )
+
+# get source files
+file( GLOB SRC_FILES "*.cpp" )
+
+# get include files
+file( GLOB INC_FILES "*.h" )
 
 # Add source to this project's executable.
-add_executable(dbench_jumbf_app "dbench_jumbf_app.h" "dbench_jumbf_app.cpp" "db_cmd_args.h" "db_cmd_args.cpp" "db_jumbf_encoder.h" "db_jumbf_encoder.cpp" "db_jumbf_parser.h" "db_jumbf_parser.cpp")
+add_executable(${EXE_NAME} ${SRC_FILES} ${INC_FILES})
 
-target_include_directories(dbench_jumbf_app PUBLIC "${CMAKE_SOURCE_DIR}/dbench_jumbf/include")
-target_link_libraries(dbench_jumbf_app dbench_jumbf)
+target_include_directories(${EXE_NAME} PUBLIC "${CMAKE_SOURCE_DIR}/dbench_jumbf/include")
+target_link_libraries(${EXE_NAME} dbench_jumbf)
 if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET dbench_jumbf_app PROPERTY CXX_STANDARD 14)
+  set_property(TARGET ${EXE_NAME} PROPERTY CXX_STANDARD 14)
 endif()
 
 # TODO: Add tests and install targets if needed.
